# Zk-shield

./: .env.local.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SETUP.sh  drips.json  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  good_first_issue.yml
.github/workflows/: ci.yml
app/deposit/: page.tsx
app/transfer/: page.tsx
app/withdraw/: page.tsx
circuits/: commitment.circom
components/proof/: useProof.ts
components/ui/: ErrorBoundary.tsx  Toast.tsx
components/wallet/: NoteImporter.tsx  WalletProvider.tsx
contracts/: Cargo.toml
contracts/src/: lib.rs
contracts/test_snapshots/test/: test_initialize.1.json  test_is_spent_false_initially.1.json
docs/: architecture.md  circuit.md
frontend/: tsconfig.tsbuildinfo
frontend/app/: layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/components/proof/: ProofProgress.tsx
frontend/components/ui/: ConnectPrompt.tsx  MobileNav.tsx  Navbar.tsx  NoteBackup.tsx  Skeleton.tsx
frontend/components/wallet/: WalletProvider.tsx
frontend/hooks/: usePoolStats.ts
frontend/public/circuits/: .gitkeep  verification_key.json
frontend/styles/: globals.css
hooks/: usePoolStats.ts  useTreeSync.ts
lib/merkle/: tree.ts
lib/stellar/: contract.ts
lib/zk/: notes.ts  proof.ts
scripts/: deploy.js  export_vkey.js  gen_zeros.js  test_proof.js  trusted_setup.js  verify_setup.js
types/: modules.d.ts
(+1 files in other folders)
