[package]
name        = "zk-shield"
version     = "0.1.0"
edition     = "2021"
description = "ZK Shield — private payments on Stellar"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { version = "21.7.6" }

[dev-dependencies]
soroban-sdk = { version = "21.7.6", features = ["testutils"] }

[profile.release]
opt-level       = "z"
overflow-checks = true
debug           = false
strip           = "symbols"
codegen-units   = 1
lto             = true
